@@ -3588,7 +3588,7 @@ the mount of the given mob, depending on the code.</td>
 
             <td>Returns the name
 of the room type the monster is in
-(plains, city, mountains, hills, watersurface, etc).</td>
+(plains, city, mountains, hills, watersurface, indoors, outdoors, etc).</td>
 
           </tr>
 
