@@ -295,7 +295,7 @@ is only relevant if the account expiration system is enabled in your coffeemud.i
 
 GENERATE=\
 Command : GENERATE\n\r\
-Usage   : GENERATE [OBJ TYPE] [ID] (FROM [FILENAME]) ([VAR]=[VAL]...) ([DIRECTION])\n\r\
+Usage   : GENERATE [OBJ TYPE] [ID] (FROM [FILENAME]) ([VAR]=[VAL]...) ([DIR]/[TARGET])\n\r\
 Example : generate area maze_dungeon from randareas/example.xml areasize=50 "areaname= the test" \
 level_range=10?20 aggrochance=50 theme=kobolds south\n\r\
 Example : generate string list\n\r\
@@ -306,7 +306,7 @@ content is built from the file in resources/randareas/example.xml, though the bu
 may specify his or her own xml file path as one of the many arguments.  The arguments, \
 briefly, are:\n\r\
 \n\r\
-OBJ TYPE: One of the following: AREA, ROOM, MOB, ITEM, or STRING.\n\r\
+OBJ TYPE: One of the following: AREA, ROOM, MOB, ITEM, SCRIPT, or STRING.\n\r\
 \n\r\
 ID      : one of the "id" xml attributes defined on any tag in the XML file. \
 Use GENERATE STRING LIST for a list of all "id" attributes defined in your file.\n\r\
@@ -327,6 +327,9 @@ the ENTIRE definition in quotes, such as "areaname=the dungeon" instead of arean
 \n\r\
 DIRECTION: This applies only to ROOM and AREA object types.  The object, if successfully generated, will \
 be linked to the current room that the player is standing in, in the direction they specify.\n\r\
+\n\r\
+TARGET: This applies only to SCRIPT object types.  The script, if successfully generated, will \
+be added to the target.\n\r\
 \n\r\
 In closing, the GENERATE command is an interesting way to deliver large amounts of dynamic content \
 for your world, though it can never replace the caring touch of a real, creative builder.  If \
